Fix html and spacing in css

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ header ul {
 
 .content {
   flex-grow: 1;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .content-top {
@@ -37,10 +39,15 @@ header ul {
 .ribbon ul {
   display: flex;
   list-style: none;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .ribbon ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.quotes {
+  display: flex;
+  flex-direction: column;
 }
